Lot of fixes to get a correct smartphone experience.

--- a/Assets/CSS/webportal.css
+++ b/Assets/CSS/webportal.css
@@ -49,3 +49,12 @@ h2, h3, h4, h5 {
 .section-btn {
     margin-bottom: 5px;
 }
+
+.custom-img-responsive {
+    max-width: 100%;
+    height: auto;
+}
+
+.custom-table-scroll {
+    overflow-x: auto;
+}
