--- a/View/Master/LoginToContinue.html.twig
+++ b/View/Master/LoginToContinue.html.twig
@@ -18,6 +18,9 @@
                             </a>
                         </div>
                     </div>
+                    <div class="show-xs">
+                        <br/>
+                    </div>
                 </div>
                 <div class="column col-6 col-md-12">
                     <div class="empty">
