--- a/View/Master/SectionController.html.twig
+++ b/View/Master/SectionController.html.twig
@@ -5,6 +5,12 @@
 
     <div class="body-section">
         <br/>
+        {% for section in fsc.sections %}
+            {% if section.fixed %}
+                {{ fsc.setCurrentSection(section.name) }}
+                {% include section.template %}
+            {% endif %}
+        {% endfor %}
         <div class="container">
             <div class="columns">
                 <div class="column col-2 col-md-12">
@@ -26,42 +32,46 @@
                     <div class="show-md">
                         <ul class="tab tab-block">
                             {% for section in fsc.sections %}
-                                {% set tabClass = (section.name == fsc.active) ? 'active' : '' %}
-                                {% set counter = (section.count > 0) ? section.count : '' %}
-                                <li class="tab-item">
-                                    <a href="#" id="secBtn{{ section.name }}2" class="section-tab badge {{ tabClass }}" data-badge="{{ counter }}" onclick="return showSection('{{ section.name }}');">
-                                        <i class="fa {{ section.icon }} fa-fw" aria-hidden="true"></i>
-                                    </a>
-                                </li>
+                                {% if section.fixed == false %}
+                                    {% set tabClass = (section.name == fsc.active) ? 'active' : '' %}
+                                    {% set counter = (section.count > 0) ? section.count : '' %}
+                                    <li class="tab-item">
+                                        <a href="#" id="secBtn{{ section.name }}2" class="section-tab badge {{ tabClass }}" data-badge="{{ counter }}" onclick="return showSection('{{ section.name }}');">
+                                            <i class="fa {{ section.icon }} fa-fw" aria-hidden="true"></i>
+                                        </a>
+                                    </li>
+                                {% endif %}
                             {% endfor %}
                         </ul>
                     </div>
                 </div>
                 <div class="column">
                     {% for section in fsc.sections %}
-                        {% set divClass = (section.name == fsc.active) ? '' : 'd-hide' %}
-                        <div id="secDiv{{ section.name }}" class="section-div {{ divClass }}">
-                            {{ fsc.setCurrentSection(section.name) }}
-                            <form id="secForm{{ section.name }}" action="" method="post">
-                                <input type="hidden" name="active" value="{{ section.name }}"/>
-                                <input type="hidden" name="offset" value="0"/>
-                                <div class="columns">
-                                    <div class="column col-4 col-sm-12">
-                                        {{ macros.sectionButtons(section) }}
+                        {% if section.fixed == false %}
+                            {% set divClass = (section.name == fsc.active) ? '' : 'd-hide' %}
+                            <div id="secDiv{{ section.name }}" class="section-div {{ divClass }}">
+                                {{ fsc.setCurrentSection(section.name) }}
+                                <form id="secForm{{ section.name }}" action="" method="post">
+                                    <input type="hidden" name="active" value="{{ section.name }}"/>
+                                    <input type="hidden" name="offset" value="0"/>
+                                    <div class="columns">
+                                        <div class="column col-4 col-sm-12">
+                                            {{ macros.sectionButtons(section) }}
+                                        </div>
+                                        <div class="column col-4 col-sm-12">
+                                            {{ macros.sectionSearch(section, i18n) }}
+                                        </div>
+                                        <div class="column col-4 col-sm-12">
+                                            {{ macros.sectionOrder(section) }}
+                                        </div>
                                     </div>
-                                    <div class="column col-4 col-sm-12">
-                                        {{ macros.sectionSearch(section, i18n) }}
-                                    </div>
-                                    <div class="column col-4 col-sm-12">
-                                        {{ macros.sectionOrder(section) }}
-                                    </div>
+                                </form>
+                                <div class="custom-table-scroll">
+                                    {% include section.template %}
                                 </div>
-                            </form>
-                            <div class="custom-table-scroll">
-                                {% include section.template %}
+                                {{ macros.sectionPagination(section) }}
                             </div>
-                            {{ macros.sectionPagination(section) }}
-                        </div>
+                        {% endif %}
                     {% endfor %}
                 </div>
             </div>
@@ -73,22 +83,22 @@
     {{ parent() }}
     <script src="{{ asset('node_modules/jquery/dist/jquery.min.js') }}"></script>
     <script type="text/javascript">
-                                        function showSection(name) {
-                                            $(".section-btn").removeClass("btn-primary");
-                                            $("#secBtn" + name).addClass("btn-primary");
+                                            function showSection(name) {
+                                                $(".section-btn").removeClass("btn-primary");
+                                                $("#secBtn" + name).addClass("btn-primary");
 
-                                            $(".section-tab").removeClass("active");
-                                            $("#secBtn" + name + "2").addClass("active");
+                                                $(".section-tab").removeClass("active");
+                                                $("#secBtn" + name + "2").addClass("active");
 
-                                            $(".section-div").removeClass("d-hide");
-                                            $(".section-div").addClass("d-hide");
-                                            $("#secDiv" + name).removeClass("d-hide");
-                                        }
-                                        function showSectionPage(name, offset) {
-                                            $("#secForm" + name + " input[name=offset]").val(offset);
-                                            $("#secForm" + name).submit();
-                                            return false;
-                                        }
+                                                $(".section-div").removeClass("d-hide");
+                                                $(".section-div").addClass("d-hide");
+                                                $("#secDiv" + name).removeClass("d-hide");
+                                            }
+                                            function showSectionPage(name, offset) {
+                                                $("#secForm" + name + " input[name=offset]").val(offset);
+                                                $("#secForm" + name).submit();
+                                                return false;
+                                            }
     </script>
 {% endblock %}
 
