Improved web search engine: - Now search with and without accents. - Now don't break words in results descriptions.

--- a/View/WebSearch.html.twig
+++ b/View/WebSearch.html.twig
@@ -28,7 +28,7 @@
                             </div>
                             <div class="tile-content">
                                 <a href="{{ item.link }}" class="tile-title">{{ item.title }}</a>
-                                <p class="tile-subtitle text-gray">{{ item.description }}</p>
+                                <p class="tile-subtitle text-gray">{{ item.description | raw }}</p>
                             </div>
                         </div>
                     {% else %}
