--- a/View/ChatBot.html.twig
+++ b/View/ChatBot.html.twig
@@ -6,17 +6,10 @@
         <div class="container grid-lg">
             <div class="columns">
                 <div class="col-12">
-                    <h1 class="text-center">
-                        <i class="fa fa-commenting-o fa-fw" aria-hidden="true"></i> ChatBot
-                    </h1>
                     <div class="panel">
-                        <div class="panel-header">
-                            <form action="{{ fsc.url() }}" method="post">
-                                <div class="input-group">
-                                    <input name="question" type="text" class="form-input" autocomplete="off" autofocus=""/>
-                                    <button class="btn btn-primary input-group-btn">{{ i18n.trans('send') }}</button>
-                                </div>
-                            </form>
+                        <div class="panel-header text-center">
+                            <i class="fa fa-commenting-o fa-2x fa-fw" aria-hidden="true"></i>
+                            <h1 class="panel-title">{{ fsc.title }}</h1>
                         </div>
                         <div class="panel-body">
                             <table class="table table-striped">
@@ -27,7 +20,7 @@
                                             <td class="text-right">
                                                 {% if msg.ischatbot %}<b>ChatBot</b>{% else %}{{ i18n.trans('you') }}{% endif %}:
                                             </td>
-                                            <td>{{ msg.content|raw }}</td>
+                                            <td>{{ msg.content | raw }}</td>
                                             <td class="text-right hide-xs">
                                                 <small>{{ msg.timesince() }}</small>
                                             </td>
@@ -35,6 +28,14 @@
                                     {% endfor %}
                                 </tbody>
                             </table>
+                        </div>
+                        <div class="panel-footer">
+                            <form action="{{ fsc.url() }}" method="post">
+                                <div class="input-group">
+                                    <input name="question" type="text" class="form-input" autocomplete="off" autofocus=""/>
+                                    <button class="btn btn-primary input-group-btn">{{ i18n.trans('send') }}</button>
+                                </div>
+                            </form>
                         </div>
                     </div>
                 </div>
