Added support for login/register new contacts
- Added support on Settings to enable/disable contact logins and new registrations
- Added support on HybridLogin to login a contact
- Added support on LoginToContinue to login a contact
- Added new page to register new contacts
- Ordered json language files, to avoid commit collision

*NOTE 1:* Maybe is useful a reCaptcha on new registrations to filter spam
*NOTE 2:* Maybe is needed a "I don't remember my password" option to restore password
*NOTE 3:* Maybe is needed a "Contact profile" page to allow users to mantain updated here own information

--- a/View/Master/LoginToContinue.html.twig
+++ b/View/Master/LoginToContinue.html.twig
@@ -30,6 +30,11 @@
                                     <i class="fa fa-twitter fa-fw" aria-hidden="true"></i> twitter
                                 </a>
                             {% endif %}
+                            {% if appSettings.get('webportal','allowlogincontacts','false') == 'true' %}
+                                <a href="{{ constant('FS_ROUTE') }}/HybridLogin?prov=fs&return={{ fsc.url() }}" class="btn btn-block">
+                                    <i class="fa fa-sign-in fa-fw" aria-hidden="true"></i> FacturaScripts
+                                </a>
+                            {% endif %}
                         </div>
                     </div>
                 </div>
