--- a/View/Macro/PortalTemplate.html.twig
+++ b/View/Macro/PortalTemplate.html.twig
@@ -24,16 +24,42 @@
 {% endmacro %}
 
 {% macro loginModal(i18n, appSettings, fsc) %}
-    <form action="{{ constant('FS_ROUTE') }}/" method="post" class="form">
-        <div class="modal modal-sm" id="loginModal">
-            <a href="#close" class="modal-overlay" aria-label="Close" onclick="return hideModal('loginModal');"></a>
-            <div class="modal-container">
-                <div class="modal-header">
-                    <a href="#close" onclick="return hideModal('loginModal');" class="btn btn-clear float-right" aria-label="Close"></a>
-                    <div class="modal-title h5">{{ i18n.trans('login') }}</div>
-                </div>
-                <div class="modal-body">
-                    <div class="content">
+
+    {% block javascripts %}
+        <script src="{{ asset('node_modules/jquery/dist/jquery.min.js') }}"></script>
+        <script type="text/javascript">
+            function showSection(name) {
+                $(".section-tab").removeClass("active");
+                $("#secBtn" + name).addClass("active");
+
+                var sectionDiv = $(".section-div");
+                sectionDiv.removeClass("d-hide");
+                sectionDiv.addClass("d-hide");
+                $("#secDiv" + name).removeClass("d-hide");
+            }
+        </script>
+    {% endblock %}
+
+    <div class="modal modal-sm" id="loginModal">
+        <a href="#close" class="modal-overlay" aria-label="Close" onclick="return hideModal('loginModal');"></a>
+        <div class="modal-container">
+            <div class="modal-header">
+                <a href="#close" onclick="return hideModal('loginModal');" class="btn btn-clear float-right" aria-label="Close"></a>
+                <div class="modal-title h5">{{ i18n.trans('login') }}</div>
+            </div>
+            <div class="modal-body">
+                <div class="content">
+                    <ul class="tab tab-block">
+                        <li class="tab-item">
+                            <a href="#" id="secBtnCustomers" class="section-tab active" onclick="return showSection('Customers');">{{ i18n.trans('customers') }}</a>
+                        </li>
+                        <li class="tab-item">
+                            <a href="#" id="secBtnEmployees" class="section-tab" onclick="return showSection('Employees');">{{ i18n.trans('employees') }}</a>
+                        </li>
+                    </ul>
+
+                    <div id="secDivCustomers" class="section-div">
+                        <br/>
                         {% if appSettings.get('webportal','fbappid','') != '' %}
                             <a href="{{ constant('FS_ROUTE') }}/HybridLogin?prov=facebook&return={{ fsc.url() }}" class="btn btn-block">
                                 <i class="fa fa-facebook fa-fw" aria-hidden="true"></i> facebook
@@ -49,31 +75,66 @@
                                 <i class="fa fa-twitter fa-fw" aria-hidden="true"></i> twitter
                             </a>
                         {% endif %}
-                        <div class="divider text-center" data-content="{{ i18n.trans('employees') }}"></div>
-                        <div class="form-group">
-                            <div class="input-group">
+                        {% if appSettings.get('webportal','allowlogincontacts','false') == 'true' %}
+                            <form action="{{ constant('FS_ROUTE') }}/HybridLogin?prov=fs" method="post" class="form">
+                                <div class="form-group">
+                                    <div class="input-group">
+                                    <span class="input-group-addon">
+                                        <i class="fa fa-user fa-fw" aria-hidden="true"></i>
+                                    </span>
+                                        <input type="text" name="fsContact" id="fsContact" class="form-input" maxlength="50" placeholder=" {{ i18n.trans('email') }}" required="" autocomplete="off"/>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <div class="input-group">
+                                    <span class="input-group-addon">
+                                        <i class="fa fa-key fa-fw" aria-hidden="true"></i>
+                                    </span>
+                                        <input type="password" name="fsContactPass" id="fsContactPass" class="form-input" maxlength="50" placeholder=" {{ i18n.trans('password') }}" required="" autocomplete="off"/>
+                                    </div>
+                                </div>
+                                <button type="submit" class="btn btn-block btn-primary">
+                                    {{ i18n.trans('login') }}
+                                </button>
+                                {% if appSettings.get('webportal','allownewregistrations','false') == 'true' %}
+                                    <div class="text-center">
+                                        <a class="text-center btn btn-block btn-success" href="{{ constant('FS_ROUTE') }}/PortalRegisterMe">
+                                            {{ i18n.trans('register-me') }}
+                                        </a>
+                                    </div>
+                                {% endif %}
+                            </form>
+                        {% endif %}
+
+                    </div>
+                    <div id="secDivEmployees" class="section-div d-hide">
+                        <br/>
+                        <form action="{{ constant('FS_ROUTE') }}/" method="post" class="form">
+                            <div class="form-group">
+                                <div class="input-group">
                                 <span class="input-group-addon">
                                     <i class="fa fa-user fa-fw" aria-hidden="true"></i>
                                 </span>
-                                <input type="text" name="fsNick" class="form-input" maxlength="50" placeholder=" {{ i18n.trans('user') }}" required="" autocomplete="off"/>
+                                    <input type="text" name="fsNick" class="form-input" maxlength="50" placeholder=" {{ i18n.trans('user') }}" required="" autocomplete="off"/>
+                                </div>
                             </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="input-group">
+                            <div class="form-group">
+                                <div class="input-group">
                                 <span class="input-group-addon">
                                     <i class="fa fa-key fa-fw" aria-hidden="true"></i>
                                 </span>
-                                <input type="password" name="fsPassword" class="form-input" maxlength="50" placeholder=" {{ i18n.trans('password') }}" required="" autocomplete="off"/>
+                                    <input type="password" name="fsPassword" class="form-input" maxlength="50" placeholder=" {{ i18n.trans('password') }}" required="" autocomplete="off"/>
+                                </div>
                             </div>
-                        </div>
-                        <button type="submit" class="btn btn-block btn-primary">
-                            {{ i18n.trans('login') }}
-                        </button>
+                            <button type="submit" class="btn btn-block btn-primary">
+                                {{ i18n.trans('login') }}
+                            </button>
+                        </form>
                     </div>
                 </div>
             </div>
         </div>
-    </form>
+    </div>
 {% endmacro %}
 
 {% macro logoutModal(i18n, fsc) %}
